Closed Bug 1381097 Opened 8 years ago Closed 6 years ago

Popups with APZ enabled to not repaint correctly after resize

Categories

(Core :: Graphics: Layers, defect, P3)

defect

Tracking

()

RESOLVED FIXED
Tracking Status
firefox56 --- wontfix
firefox57 --- fix-optional

People

(Reporter: josh.tumath+bugzilla, Assigned: kmag)

References

(Blocks 1 open bug)

Details

(Whiteboard: gfx-noted)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:56.0) Gecko/20100101 Firefox/56.0 Build ID: 20170714030205 Steps to reproduce: 1. Download the Feedly Notifier add-on (https://olsh.me/Feedly-Notifier/). 2. Click on the icon that the add-on puts in the navigation toolbar. Actual results: The panel appears for a few milliseconds starting to animate out from the button, but then it suddenly disappears. Expected results: The panel should have opened, showing either a Login button or a list of all of your Feedly reading list. I have noticed this bug since the 2017-07-11 build of Nightly.
Component: Untriaged → WebExtensions: Frontend
Product: Firefox → Toolkit
Summary: Panel for Feedly Notifier add-on does not display → OOP extensions popups do not repaint correctly after resize
Component: WebExtensions: Frontend → Graphics: Layers
Product: Toolkit → Core
Status: UNCONFIRMED → NEW
Ever confirmed: true
Apparently this is due to APZ being enabled for the popups, regardless of whether they have remote content.
Summary: OOP extensions popups do not repaint correctly after resize → Popups with APZ enabled to not repaint correctly after resize
Keywords: leave-open
Comment on attachment 8886804 [details] Bug 1381097: Part 1 - Add default-false pref to enable APZ in remote popups. https://reviewboard.mozilla.org/r/157582/#review162884
Attachment #8886804 - Flags: review?(bugmail) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/228602d59911f40a39c75841722be7c4b124c447 Bug 1381097: Part 1 - Add default-false pref to enable APZ in remote popups. r=kats
Priority: -- → P3
The problem is gone after this patch on my machine, Kris should we close this bug? or there are some reason that we should leave it opened?
Flags: needinfo?(kmaglione+bmo)
Whiteboard: gfx-noted
When you get to this - let's decide if this can be closed or not.
Flags: needinfo?(kmaglione+bmo)
The short term "fix" was to disable APZ in these popups. In the long term, we really want OOP popups to use APZ, so this will still need to be fixed in order to enable that.
Flags: needinfo?(kmaglione+bmo)
(In reply to Kris Maglione [:kmag] (long backlog; ping on IRC if you're blocked) from comment #9) > The short term "fix" was to disable APZ in these popups. In the long term, > we really want OOP popups to use APZ, so this will still need to be fixed in > order to enable that. Hmmm. For me having apz.allow_zooming enabled is what broke the webext button menus (bug 1416207). In contrast I have apz.popups.enabled enabled right now and the menus work.
That's not surprising. The problems are sporadic.
Depends on: 1493208

The leave-open keyword is there and there is no activity for 6 months.
:jbonisteel, maybe it's time to close this bug?

Flags: needinfo?(jbonisteel)

Looks like we can close it

Flags: needinfo?(jbonisteel)
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → WONTFIX

Fixed is a better resolution since we did fix it. Bug 1493208 is tracking re-enabling APZ for popups which is the remaining work here.

Resolution: WONTFIX → FIXED
Assignee: nobody → kmaglione+bmo
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: